--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -5,11 +5,15 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer!</h1>
-    <form method="POST" action="/piglatinize">
-      <label for="phrase">Enter your phrase:</label>
-      <input type="text" id="phrase" name='user_phrase'>
-      <input type="submit">
-    </form>
+    <form method="POST" action="/new">
+     <label>Team Name: <input type="text" name="name" /></label><br/>
+     <label>Coach: <input type="text" name="coach" /></label><br/>
+     <label>Point Guard: <input type="text" name="pg" /></label><br/>
+     <label>Shooting Guard: <input type="text" name="sg" /></label><br/>
+     <label>Power Forward: <input type="text" name="pf" /></label><br/>
+     <label>Small Forward: <input type="text" name="sf" /></label><br/>
+     <label>Center: <input type="text" name="c" /></label><br/><br/>
+     <input type="submit" id="Submit" />
+   </form>
   </body>
 </html>
