--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -6,9 +6,9 @@
   </head>
   <body>
     <form method="POST" action="/new">
-     <label>Team Name: <input type="text" name="name" /></label><br/>
-     <label>Coach: <input type="text" name="coach" /></label><br/>
-     <label>Point Guard: <input type="text" name="pg" /></label><br/>
+     <label>Name: <input type="text" name="name" /></label><br/>
+     <label>Breed: <input type="text" name="breed" /></label><br/>
+     <label>Age: <input type="text" name="pg" /></label><br/>
      <label>Shooting Guard: <input type="text" name="sg" /></label><br/>
      <label>Power Forward: <input type="text" name="pf" /></label><br/>
      <label>Small Forward: <input type="text" name="sf" /></label><br/>
