--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -8,11 +8,7 @@
     <form method="POST" action="/new">
      <label>Name: <input type="text" name="name" /></label><br/>
      <label>Breed: <input type="text" name="breed" /></label><br/>
-     <label>Age: <input type="text" name="pg" /></label><br/>
-     <label>Shooting Guard: <input type="text" name="sg" /></label><br/>
-     <label>Power Forward: <input type="text" name="pf" /></label><br/>
-     <label>Small Forward: <input type="text" name="sf" /></label><br/>
-     <label>Center: <input type="text" name="c" /></label><br/><br/>
+     <label>Age: <input type="text" name="age" /></label><br/>
      <input type="submit" id="Submit" />
    </form>
   </body>
