automatically backed up by learn

--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -5,6 +5,8 @@
     <title>title</title>
   </head>
   <body>
-  
+    Team Name: <h1><%= @name %></h1><br />
+      Coach: <h2><%= @coach %></h2><br />
+      Point Guard: <h2><%= @pg %></h2><br />
   </body>
 </html>
