automatically backed up by learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Welcome!</h1>
-
+    <a href="https://www.w3schools.com/html/">Visit our HTML tutorial</a>
   </body>
 </html>
