automatically backed up by learn

--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -5,8 +5,8 @@
     <title>title</title>
   </head>
   <body>
-      Name: <h2><%= @name %></h2><br />
-      Breed: <h2><%= @breed %></h2><br />
+      Puppy Name: <h2><%= @name %></h2><br />
+      PuppyBreed: <h2><%= @breed %></h2><br />
       Age: <h2><%= @age %></h2><br />
   </body>
 </html>
