--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -6,7 +6,7 @@
   </head>
   <body>
       Puppy Name: <h2><%= @name %></h2><br />
-      PuppyBreed: <h2><%= @breed %></h2><br />
-      Age: <h2><%= @age %></h2><br />
+      Puppy Breed: <h2><%= @breed %></h2><br />
+      Puppy Age: <h2><%= @age %></h2><br />
   </body>
 </html>
