--- a/views/index.erb
+++ b/views/index.erb
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Welcome!</h1>
-    <a href="">Click Here To List A Puppy</a>
+    <a href="/new">Click Here To List A Puppy</a>
   </body>
 </html>
