automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -9,7 +9,7 @@
      <label>Name: <input type="text" name="name" /></label><br/>
      <label>Breed: <input type="text" name="breed" /></label><br/>
      <label>Age: <input type="text" name="age" /></label><br/>
-     <input type="submit" id="Submit" />
+     <input type="submit" id="ubmit" />
    </form>
   </body>
 </html>
